<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/aries"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFDEAD"
            android:text="@string/aries"
            android:textColor="#fff"
            android:textSize="25sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#fff" />

        <Button
            android:id="@+id/taurus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFDEAD"
            android:text="@string/taurus"
            android:textColor="#fff"
            android:textSize="25sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/gemini"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFC1C1"
            android:text="@string/gemini"
            android:textColor="#fff"
            android:textSize="25sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#fff" />

        <Button
            android:id="@+id/cancer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFC1C1"
            android:text="@string/cancer"
            android:textColor="#fff"
            android:textSize="25sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/leo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFDEAD"
            android:text="@string/leo"
            android:textColor="#fff"
            android:textSize="25sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#fff" />

        <Button
            android:id="@+id/virgo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFDEAD"
            android:text="@string/virgo"
            android:textColor="#fff"
            android:textSize="25sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/libra"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFC1C1"
            android:text="@string/libra"
            android:textColor="#fff"
            android:textSize="25sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#fff" />

        <Button
            android:id="@+id/scorpio"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFC1C1"
            android:text="@string/scorpio"
            android:textColor="#fff"
            android:textSize="25sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/sagittarius"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFDEAD"
            android:text="@string/sagittarius"
            android:textColor="#fff"
            android:textSize="25sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#fff" />

        <Button
            android:id="@+id/capricorn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFDEAD"
            android:text="@string/capricorn"
            android:textColor="#fff"
            android:textSize="25sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/aquarius"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFC1C1"
            android:text="@string/aquarius"
            android:textColor="#fff"
            android:textSize="25sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#fff" />

        <Button
            android:id="@+id/pisces"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFC1C1"
            android:text="@string/pisces"
            android:textColor="#fff"
            android:textSize="25sp" />
    </LinearLayout>
</LinearLayout>