<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0FFFF"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

    </Spinner>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/draw_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_draw_o"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:gravity="center"
                android:text="@string/play_o"
                android:textColor="#fff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_draw_e"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape"
                android:gravity="center"
                android:text="@string/play_e"
                android:textColor="#fff"
                android:textSize="30sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/luckiness"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/luckiness"
            android:textColor="#ff0000"
            android:textSize="50sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/unluckiness"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/unluckiness"
            android:textSize="50sp"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <Button
                android:id="@+id/play"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/play" />

            <Button
                android:id="@+id/pause"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/pause" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>